# MyLinuxApp

01_net/: tcpClient  tcpClient.c  tcpServer  tcpServer.c
02_thread/poll_select/: mypoll  poll.c
02_thread/pthread/: thread  thread.c
03_uart/: serial  serial.c
04_v4l2/: alientek_v4l2.c  camera  camera.c  my_v4l2  my_v4l2.c
warehouse_system_V1.0/include/: camera.h  goods.h  serial.h
warehouse_system_V1.0/lib/libSqlite3/pkgconfig/: sqlite3.pc
warehouse_system_V1.0/src/: main.c  mqtt.c
warehouse_system_V2.0/: CMakeLists.txt
warehouse_system_V2.0/include/: camera.h  mqtt.h  sqlite.h  warehouse.h
warehouse_system_V2.0/lib/libSqlite3/: libsqlite3.so.3.49.1
warehouse_system_V2.0/lib/libpahoMQTT/: libpaho-mqtt3c.so.1
warehouse_system_V2.0/src/: camera.c  main.c  serial.c  sqlite.c  warehouse.c
多人聊天系统/Client/: client  client.c  makefile  menuInterface.c  menuInterface.h  stdShared.h
多人聊天系统/Server/: base.db  database.c  database.h  makefile  readme.md  server  server.c
